# Galarnel

./: .gitmodules  CMakeLists.txt  Makefile  README.md  lmake.lua
libraries/libsteel/: start.cc
libraries/libsteel/devices/: mini_uart.cc
libraries/libsteel/events/: event.cc  event.hh  exc.S
linker/: pc99.ld
src/: aarch64.S  aarch64.cc  aarch64.h  aarch64.hh  common.h  main.c  main.cc
src/boot/: start.c
src/drivers/: bcm2835auxuart.c  bcm2835auxuart.cc  bcm2835auxuart.h  bcm2835auxuart.hh  bcm2835intc.c  bcm2835intc.cc  bcm2835intc.h  bcm2835intc.hh  bcm2835timer.cc  bcm2835timer.hh  cltimer.S  cltimer.h
src/drivers/bcm2711gpio/: bcm2711gpio.c  bcm2711gpio.h
src/drivers/bcm2835-aux-uart/: bcm2835auxuart.h
src/drivers/bcm2835auxuart/: bcm2835auxuart.c
src/drivers/gic400/: gic400.c  gic400.h
src/hal/: console.h  cpu.cc  cpu.h  cpu.hh  exc.h  excpt.cc  excpt.hh  intc.h  interrupts.cc  interrupts.hh  ltimer.h  stimer.h
src/hal/aarch64/: aarch64_cpu.S  aarch64_cpu.h  aarch64_excpt.S  aarch64_excpt.c  aarch64_excpt.h  aarch64_sysregs.S  aarch64_sysregs.h  cpu.S  exc.S  exc.c
src/hal/bcm2711/: console.c  constants.h  intc.c
src/hal/bcm2837/: constants.h  intc.c
src/interrutps/: exceptions.S  exceptions.c  exceptions.h  intman.c  intman.h
src/kernel/: boot.S  cpu.S  cpu.h  interrupt_controller.S  interrupt_controller.cc  interrupt_controller.hh  interrupt_vector.S  io.h  kernel.cc  mini_uart.cc  mini_uart.hh  pre_kernel.S  utils.S  utils.h
src/kernel/arm/: sysregs.h
src/klib/: array.hh  cstring.cc  cstring.hh  func.hh  klib.cc  klib.hh  printf.cc  printf.hh
src/memory/: heap.c  heap.cc  heap.h  heap.hh
src/pal/: cltimer.hh  cpu.hh  debug.hh  excp.hh  intc.hh  swtimer.hh
src/pal/drivers/gdt/: gdt.cc  gdt.hh
src/pal/drivers/pic/: interrupt_stubs.S  pic.cc  pic.hh
src/pal/platform/pc99/: boot.S  cpu.cc  debug.cc  pre_configuration.cc
src/pal/platform/x86bios/: boot.S  cpu.cc  debug.cc  intc.cc  interrupt_stubs.S  ports.cc  ports.hh  pre_configuration.cc
src/scheduler/: scheduler.c  scheduler.cc  scheduler.h  scheduler.hh
src/util/: printf.cc  printf.hh
